User guide initial commit.

--- a/dev/barchtk_tester.ipynb
+++ b/dev/barchtk_tester.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import broadcastify_archtk.archive as barchtk\n",
+    "import broadcastify_archtk.archive as btk\n",
     "import datetime as dt"
    ]
   },
@@ -41,9 +41,9 @@
    "source": [
     "login_path='/Users/joseph/data_science/personal_projects/broadcastify-archtk/private/pwd.ini'\n",
     "\n",
-    "# archive = barchtk.BroadcastifyArchive(TEST_FEED_ID, username='ljhopkins2', password='S7!z2jHBuS6GBnR')\n",
-    "# archive = barchtk.BroadcastifyArchive(TEST_FEED_ID, username='foo', password='bar')\n",
-    "archive = barchtk.BroadcastifyArchive(\n",
+    "# archive = btk.BroadcastifyArchive(TEST_FEED_ID, username='ljhopkins2', password='S7!z2jHBuS6GBnR')\n",
+    "# archive = btk.BroadcastifyArchive(TEST_FEED_ID, username='foo', password='bar')\n",
+    "archive = btk.BroadcastifyArchive(\n",
     "    TEST_FEED_ID,\n",
     "    login_cfg_path=login_path\n",
     ")"
