tqdm desc updates; skip reset if _feed_id not changed; revamp demo; docs

--- a/dev/barchtk_tester.ipynb
+++ b/dev/barchtk_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,28 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing calendar navigation for Travis County Law Enforcement...\n",
-      "Initialization complete.\n",
-      "\n",
-      "BroadcastifyArchive\n",
-      " (Feed ID = 14439\n",
-      "  Feed Name = Travis County Law Enforcement\n",
-      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
-      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
-      "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-11-08\n",
-      "  Username = \"cwchiu\" Password = [True]\n",
-      "  0 built archive entries \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "login_path = '/Users/joseph/data_science/personal_projects/broadcastify-archtk/private/pwd.ini'\n",
     "# driver_path = '/Users/joseph/GA-DSI/projects/project_5/police-radio-to-mapping/assets/chromedriver'\n",
@@ -65,55 +46,17 @@
     "archive = btk.BroadcastifyArchive(\n",
     "    TEST_FEED_ID,\n",
     "    login_cfg_path=login_path,\n",
-    "    webdriver_path=driver_path\n",
+    "#     webdriver_path=driver_path\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching webdriver...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84965f69ad724a4d93bab7e66fb3752a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='Building dates', layout=Layout(flex='2'), max=8, style=Progre…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "BroadcastifyArchive\n",
-      " (Feed ID = 14439\n",
-      "  Feed Name = Travis County Law Enforcement\n",
-      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
-      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
-      "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-11-08\n",
-      "  Username = \"cwchiu\" Password = [True]\n",
-      "  332 built archive entries between 2019-11-01 and 2019-11-08\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "archive.build(days_back=7, rebuild=True)"
    ]
