Change module naming for imports; functionality & docs

--- a/testing/barchtk_tester.ipynb
+++ b/testing/barchtk_tester.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.insert(1, '/Users/joseph/data_science/personal_projects/broadcastify-archtk/barchtk_distribution/')"
+    "sys.path.insert(1, '/Users/joseph/data_science/personal_projects/broadcastify-archtk/code/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import broadcastify_archtk.archive as btk\n",
+    "# import broadcastify_archtk.archive as btk\n",
+    "from broadcastify_archtk import BroadcastifyArchive\n",
     "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing calendar navigation for Travis County Law Enforcement...\n",
+      "Initialization complete.\n",
+      "\n",
+      "BroadcastifyArchive\n",
+      " (Feed ID = 14439\n",
+      "  Feed Name = Travis County Law Enforcement\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
+      "  Start Date: 2019-01-28\n",
+      "  End Date:   2019-11-15\n",
+      "  Username = \"cwchiu\" Password = [True]\n",
+      "  0 built archive entries \n"
+     ]
+    }
+   ],
    "source": [
     "login_path = '/Users/joseph/data_science/personal_projects/broadcastify-archtk/private/pwd.ini'\n",
     "# driver_path = '/Users/joseph/GA-DSI/projects/project_5/police-radio-to-mapping/assets/chromedriver'\n",
     "# archive = btk.BroadcastifyArchive(TEST_FEED_ID, username='ljhopkins2', password='S7!z2jHBuS6GBnR')\n",
     "# archive = btk.BroadcastifyArchive(TEST_FEED_ID, username='foo', password='bar')\n",
-    "archive = btk.BroadcastifyArchive(\n",
+    "archive = BroadcastifyArchive(\n",
     "    TEST_FEED_ID,\n",
     "    login_cfg_path=login_path,\n",
     "#     webdriver_path=driver_path\n",
@@ -52,11 +72,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching webdriver...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6375b11ccf5d4c5da0f114cfcf7f7c14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Building dates', layout=Layout(flex='2'), max=8, style=Progre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "BroadcastifyArchive\n",
+      " (Feed ID = 14439\n",
+      "  Feed Name = Travis County Law Enforcement\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
+      "  Start Date: 2019-01-28\n",
+      "  End Date:   2019-11-15\n",
+      "  Username = \"cwchiu\" Password = [True]\n",
+      "  369 built archive entries between 2019-11-08 and 2019-11-15\n"
+     ]
+    }
+   ],
    "source": [
     "archive.build(days_back=7, rebuild=True)"
    ]
@@ -69,7 +127,7 @@
    "source": [
     "mp3_path = '/Users/joseph/data_science/personal_projects/broadcastify-archtk/testing/mp3_downloads/'\n",
     "\n",
-    "archive.download(start=dt.datetime(2019,10,31,20,0), end=dt.datetime(2019,11,1,2,0),\n",
+    "archive.download(start=dt.datetime(2019,10,8,20,0), end=dt.datetime(2019,10,9,2,0),\n",
     "                output_path=mp3_path)"
    ]
   },
