Remove btk references in docs and test scripts.

--- a/testing/barchtk_tester.ipynb
+++ b/testing/barchtk_tester.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import broadcastify_archtk.archive as btk\n",
+    "# from broadcastify_archtk import BroadcastifyArchive\n",
     "from broadcastify_archtk import BroadcastifyArchive\n",
     "import datetime as dt"
    ]
@@ -61,8 +61,8 @@
    "source": [
     "login_path = '/Users/joseph/data_science/personal_projects/broadcastify-archtk/private/pwd.ini'\n",
     "# driver_path = '/Users/joseph/GA-DSI/projects/project_5/police-radio-to-mapping/assets/chromedriver'\n",
-    "# archive = btk.BroadcastifyArchive(TEST_FEED_ID, username='ljhopkins2', password='S7!z2jHBuS6GBnR')\n",
-    "# archive = btk.BroadcastifyArchive(TEST_FEED_ID, username='foo', password='bar')\n",
+    "# archive = BroadcastifyArchive(TEST_FEED_ID, username='ljhopkins2', password='S7!z2jHBuS6GBnR')\n",
+    "# archive = BroadcastifyArchive(TEST_FEED_ID, username='foo', password='bar')\n",
     "archive = BroadcastifyArchive(\n",
     "    TEST_FEED_ID,\n",
     "    login_cfg_path=login_path,\n",
