--- a/testing/broadcastify_archtk_demo_uninstalled_environment.ipynb
+++ b/testing/broadcastify_archtk_demo_uninstalled_environment.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import broadcastify_archtk.archive as btk\n",
+    "from broadcastify_archtk import BroadcastifyArchive\n",
     "import datetime as dt"
    ]
   },
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive = btk.BroadcastifyArchive(TEST_FEED_ID, \n",
+    "archive = BroadcastifyArchive(TEST_FEED_ID, \n",
     "                                  login_cfg_path=login_path, \n",
     "                                  username=USERNAME, \n",
     "                                  password=PASSWORD\n",
