--- a/broadcastify_archtk_demo.ipynb
+++ b/broadcastify_archtk_demo.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import broadcastify_archtk.archive as btk\n",
+    "from broadcastify_archtk import BroadcastifyArchive\n",
     "import datetime as dt"
    ]
   },
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive = btk.BroadcastifyArchive(TEST_FEED_ID, \n",
+    "archive = BroadcastifyArchive(TEST_FEED_ID, \n",
     "                                  login_cfg_path=login_path, \n",
     "                                  username=USERNAME, \n",
     "                                  password=PASSWORD,\n",
