--- a/testing/barchtk_tester.ipynb
+++ b/testing/barchtk_tester.ipynb
@@ -52,7 +52,7 @@
       "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
       "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
       "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-11-15\n",
+      "  End Date:   2019-12-04\n",
       "  Username = \"cwchiu\" Password = [True]\n",
       "  0 built archive entries \n"
      ]
@@ -87,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6375b11ccf5d4c5da0f114cfcf7f7c14",
+       "model_id": "7330a232e9ea425b8a41f84df6cd82d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,9 +109,9 @@
       "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
       "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
       "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-11-15\n",
+      "  End Date:   2019-12-04\n",
       "  Username = \"cwchiu\" Password = [True]\n",
-      "  369 built archive entries between 2019-11-08 and 2019-11-15\n"
+      "  368 built archive entries between 2019-11-27 and 2019-12-04\n"
      ]
     }
    ],
@@ -121,13 +121,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77b009360292425fabdbd9a6f868d0e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Overall progress', layout=Layout(flex='2'), max=11, style=Pro…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Downloading 11-27-19 20:13 to 11-28-19 01:11\n",
+      "\r",
+      "Storing at /Users/joseph/data_science/personal_projects/broadcastify-archtk/testing/mp3_downloads/.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cee49ce0946247a59aa4a67a0b934378",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911280111-766223-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c74b1ef343844fe5a2b2be49230b1c8b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911280041-782722-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6874a180ba5f438ebadb3de6793b6e47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911280011-562473-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30d11a466a924dfa853cdeaa1492a703",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272342-397466-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1d15d0de5ad4b4bafb6433d3ac7b289",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272312-394404-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d771e4e66ecd47aa84a48545fc2ab5c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272242-88484-14439.mp3', layout=Layout(flex…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c656644edd704979b3889af159fb142f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272212-920081-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0edf220ec41f45c79628d4d5730f9c93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272142-261171-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f884d20a92604b7c923b5bdc4b896d0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272112-958002-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "104003fa734447489a217377f20aef63",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272043-616476-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1dc03cb3ba04a52b14ad9a87b2c598f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Downloading 201911272013-943159-14439.mp3', layout=Layout(fle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "mp3_path = '/Users/joseph/data_science/personal_projects/broadcastify-archtk/testing/mp3_downloads/'\n",
     "\n",
-    "archive.download(start=dt.datetime(2019,10,8,20,0), end=dt.datetime(2019,10,9,2,0),\n",
+    "archive.download(start=dt.datetime(2019,11,27,20,0), end=dt.datetime(2019,11,28,2,0),\n",
     "                output_path=mp3_path)"
    ]
   },
